fix alignment when filtering

--- a/src/components/Products/ProductItem/ProductItem.scss
+++ b/src/components/Products/ProductItem/ProductItem.scss
@@ -29,6 +29,7 @@
 
   @include respond-to('medium') {
     width: 340px;
+    margin-right: 10px;
 
     .image {
       width: 80%;
